--- a/layouts/index.html
+++ b/layouts/index.html
@@ -134,4 +134,15 @@
 {{ end}}
 {{ end}}
 
+<section class="video" style="padding: 70px">
+  <div class="container text-center">
+    <div class="section-title">
+      <h2>Elect Pamela Young Jacobs</h2>
+    </div>
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/uxeipMOQ3UI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </div>
+</section>
+
 {{ end }}
